--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,6 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -29,5 +27,39 @@ body {
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+    
   }
 }
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  z-index: 9999; /* Assurez-vous que ce z-index est supérieur aux autres éléments */
+}
+
+.modal.active {
+  display: flex;
+}
+
+.modal.hidden {
+  display: none;
+}
+
+/* Mobile menu link styles */
+.md:hidden .block.hover:text-amber-800 {
+  /* Remove hover effect for mobile menu links */
+  text-decoration: underline;
+}
+
+.md:hidden .block.text-amber-800 {
+  /* Add subtle underline for active link */
+  text-decoration: underline;
+}
+
